--- a/Index.html
+++ b/Index.html
@@ -25,6 +25,9 @@
                         <li>
                             <a href="https://embraer.com/br/pt/contato">Contato</a>
                         </li>
+                        <li>
+                            <a href="https://crudjsbne.netlify.app/">Lista de Pedidos</a>
+                        </li>
                     </ul>
                 </nav>
             </div>
@@ -152,7 +155,7 @@
             </a>
             <a href="https://www.youtube.com/embraer">
                 <i class="fa-brands fa-youtube"></i>
-            </a>
+            </a> 
         </footer>
         
     </body>
